chore: 降级Spring Boot至2.7.18并调整相关配置
- 将Spring Boot从3.2.12降级至2.7.18以兼容Java 8
- 更新依赖：mybatis-plus-spring-boot3-starter改为mybatis-plus-boot-starter
- 将jakarta.validation和servlet API替换为javax.validation
- 调整CORS配置以支持更宽松的跨域请求
- 修复前端类型定义和事件传递问题
- 更新生产环境端口和开发代理配置